[package]
name = "geodata-util"
version = "0.1.0"
authors = ["陈旭健 <chenxujian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["blocking"] }
anyhow = "1.0.35"
log = "0.4.11"
simple_logger = "1.11.0"
