[package]
name = "geodata-util"
version = "0.1.2"
authors = ["陈旭健 <chenxujian@gmail.com>"]
edition = "2018"
publish = false
keywords = ["geo", "geosite", "geoip"]

[profile.release]
opt-level = 'z'
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }
log = "0.4.14"
bytes = "1.0.1"
env_logger = "0.8.3"
